// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LambdaStatusBadge LambdaStatusBadge should render with status building 1`] = `
<span
  className="fd-badge"
>
  Building
</span>
`;

exports[`StatusBadge should render loading state initially 1`] = `
<span
  className="fd-badge"
>
  INITIAL
</span>
`;
